Image Grid: Fix Link Not Covering Image Entirely

--- a/widgets/image-grid/styles/default.less
+++ b/widgets/image-grid/styles/default.less
@@ -21,6 +21,10 @@
 		padding: @padding;
 		display: inline-block;
 
+		a {
+			display: block;
+		}
+
 		img {
 			opacity: 0;
 			max-width:100%;
